# ClipSave

./: .gitignore  LICENSE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.d.ts.map  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.d.ts  vite.config.d.ts.map  vite.config.ts
.github/workflows/: ci.yml  release.yml
.kiro/specs/clipsave/: .config.kiro  requirements.md  tasks.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs  models.rs
src-tauri/src/commands/: files.rs  history.rs  mod.rs  parse.rs  settings.rs  tasks.rs
src-tauri/src/download/: downloader.rs  file_organizer.rs  filename_sanitizer.rs  mod.rs  muxer.rs  task_queue.rs
src-tauri/src/parser/: common.rs  douyin.rs  fetcher.rs  link_extractor.rs  mod.rs  registry.rs  url_normalizer.rs  xiaohongshu.rs
src-tauri/src/storage/: history.rs  mod.rs  settings.rs
src/components/: Layout.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Progress.tsx
src/features/downloads/: TaskCard.tsx
src/hooks/: useStore.ts  useTaskEvents.ts  useTheme.ts
src/i18n/en-US/: common.json
src/i18n/zh-CN/: common.json
src/lib/: errors.ts  i18n.test.ts  i18n.ts  tauri.ts  types.ts  utils.ts
src/routes/: AboutPage.tsx  DebugPage.tsx  HistoryPage.tsx  HomePage.tsx  SettingsPage.tsx
src/styles/: globals.css
