[package]
name = "clipsave"
version = "1.0.0"
description = "ClipSave - Cross-platform media save tool"
authors = ["ClipSave Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "clipsave_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
regex = "1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
scraper = "0.20"
percent-encoding = "2"
async-trait = "0.1"
futures-util = "0.3"
dirs = "5"

[dev-dependencies]
proptest = "1"
tempfile = "3"
mockito = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
